--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,10 @@ services:
     volumes:
       - './client.pem:/client.pem'
     environment:
-      - "HOST=192.168.103.180"
-      - "TOKEN=UojOceUtnvtaxpiY"
-      - "RTSP_URL=rtsp://freja.hiof.no:1935/rtplive/definst/hessdalen03.stream"
+      HOST: "192.168.103.180"
+      TOKEN: "UojOceUtnvtaxpiY"
+      RTSP_URL: "rtsp://freja.hiof.no:1935/rtplive/definst/hessdalen03.stream"
+      CERT: "/unifi/client.pem"
     restart: always
   unifi-video-controller:
     image:  pducharme/unifi-video-controller
